Correct tests * Replace get(0) with getFirst() * Corrected compile errors