@@ -89,7 +89,7 @@ class JobOpportunityControllerTest {
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertNotNull(response.getBody());
         assertEquals(1, response.getBody().size());
-        assertEquals(dto, response.getBody().get(0));
+        assertEquals(dto, response.getBody().getFirst());
     }
 
     @Test
